Blogs links and title update

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -68,8 +68,8 @@
                 <p class="des_name">founder of codesdesk</p>
             </div>
             <div class="text-side">
-                <h2 class="mange_heading">Management and Team</h2>
-                <p class="manage_text">
+                <h2 class="mange_heading primery-heading">Management and Team</h2>
+                <p class="p-text">
                     <span>“</span>At Codesdesk Technology, we blend dedication, sincerity and adaptability to bring you standout digital solutions and reliable staffing services. Our strong commitment to improving our society drives us and we're passionate about pushing your success forward with unwavering hard work and a focused approach.<span>”</span>
                 </p>
             </div>
