--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -96,7 +96,7 @@
                         <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
-                        <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                        <img class="mhc-sl-img" src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
                         <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
@@ -117,7 +117,7 @@
                         <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
-                        <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                        <img class="lan-sl-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
                         <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
@@ -141,7 +141,7 @@
                     <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                    <img class="mhc-sl-img" src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
@@ -162,7 +162,7 @@
                     <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    <img class="l&n-ms-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
@@ -200,7 +200,7 @@
                     <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    <img class="l&n-ms-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
@@ -221,7 +221,7 @@
                     <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                    <img class="mhc-sl-img" src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
@@ -245,7 +245,7 @@
                     <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    <img class="l&n-ms-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
@@ -266,7 +266,7 @@
                     <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                    <img class="mhc-sl-img" src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
@@ -491,7 +491,7 @@
                     <a target="_blank" href="https://www.shopify.com/in" class="part_logo">
                         <img src="../../assets/image/shopify-logo.png" alt="">
                     </a>
-                    <a target="_blank" href="" class="part_logo">
+                    <a target="_blank" href="https://rechargepayments.com/" class="part_logo">
                         <img src="../../assets/image/recharge-new.png" alt="">
                     </a>
                     <a target="_blank" href="https://shippsy.com/" class="part_logo">
@@ -568,25 +568,25 @@
                     </div>
                     <div class="blog-title-text">
                         <h3>January 02, 2023</h3>
-                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
+                        <p>The SEO Game-Changer: 5 Tips for Optimising Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 21, 2023</h3>
-                        <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
+                        <p>Simplify and Streamline: 5 Must-Have Shopify Apps for Business Operations.</p>
                     </div>
                 </a>
-                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>February 06, 2023</h3>
-                        <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
+                        <p>Boost Your Shopify Store Sales with Instagram.</p>
                     </div>
                 </a>
             </div>
