--- a/src/app/blog-list/blog-list.component.css
+++ b/src/app/blog-list/blog-list.component.css
@@ -31,6 +31,9 @@
     background: #D9D9D9;
     padding: 18px 25px;
     outline: none;
+    font-size: 18px;
+    font-family: var(--second-heading);
+    font-weight: 300;
 }
 .blog-tab-section .blog-tab-main .blog-search .search-input-btn {
     border: none;
