--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -17,7 +17,7 @@
                 <div class="container">
                    <div class="blog-tab-main">
                         <form class="blog-search flex-center">
-                            <input type="search" id="myInput" placeholder="Search....." name="search">
+                            <input type="search" id="myInput" placeholder="Search......." name="search">
                             <span class="search-input-btn flex-center"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.5998 2.3999C6.64915 2.3999 1.7998 7.24925 1.7998 13.1999C1.7998 19.1506 6.64915 23.9999 12.5998 23.9999C14.7729 23.9999 16.7952 23.3483 18.492 22.2374L26.0271 29.7726L28.5725 27.2272L21.1346 19.7894C22.5487 17.9629 23.3998 15.6807 23.3998 13.1999C23.3998 7.24925 18.5505 2.3999 12.5998 2.3999ZM12.5998 4.7999C17.2535 4.7999 20.9998 8.54616 20.9998 13.1999C20.9998 17.8536 17.2535 21.5999 12.5998 21.5999C7.94606 21.5999 4.1998 17.8536 4.1998 13.1999C4.1998 8.54616 7.94606 4.7999 12.5998 4.7999Z" fill="white"/>
                                 </svg>
@@ -182,7 +182,7 @@
                         <p>Boosting Sales: The Role of Email Marketing in Shopify Stores</p>
                     </div>
                 </a>
-                <a routerLink="/resource/apps-for-streamlining-your-business" id="shopify-apps" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" id="shopify-apps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog-three">
                     </div>
@@ -191,7 +191,7 @@
                         <p>Simplify and Streamline: 5 Must-Have Shopify Apps for Business Operations.</p>
                     </div>
                 </a>
-                <a routerLink="/resource/use-instagram-to-drive-sales" id="E-commerce" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" id="E-commerce" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog-two">
                     </div>
