--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,6 +11,7 @@
 </section>
 <section class="about-banner-section">
     <div class="banner-image-wrap">
+        <img src="../../assets/image/about-banner1.webp" width="100%" alt="banner">
     </div>
     <div class="container">
         <div class="about_cards_wrap flex">
