--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -162,7 +162,7 @@
                     <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img class="l&n-ms-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    <img class="lan-sl-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
@@ -200,7 +200,7 @@
                     <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img class="l&n-ms-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    <img class="lan-sl-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
@@ -245,7 +245,7 @@
                     <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
-                    <img class="l&n-ms-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    <img class="lan-sl-img" src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
                 </div>
                 <div class="svg-wrap-group">
                     <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
