--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -470,13 +470,17 @@
         padding: 40px 0;
     }
     .marquee .svg-wrap-group {
-        width: 300px;
-        height: 150px;
+        width: 200px;
+        height: 100px;
     }
     .marquee__group .svg-wrap-group img {
         width: 70%;
     }
     .marquee__group .svg-wrap-group img.mhc-sl-img {
         width: 50%;
+    }
+    .marquee__group .svg-wrap-group .lan-sl-img {
+        max-width: 65px;
+        width: 100%;
     }
 }
