--- a/src/app/menshealthclinic/menshealthclinic.component.html
+++ b/src/app/menshealthclinic/menshealthclinic.component.html
@@ -327,7 +327,7 @@
                     </a>
                     <a routerLink="/our-work/northstarcoffee" class="case-items" ngxSlickItem>
                         <div class="card-h-txt desktop">
-                            <h3 class="logo_card">North Star Coffee</h3>
+                            <h3 class="logo_card egyptian">North Star Coffee</h3>
                             <div class="bottom_card">
                                 <h4 class="card-heading">Northstarcoffeeco</h4>
                                 <p class="card-txt">Shopify Plus Design & Build</p>
