--- a/src/app/northstarcoffee/northstarcoffee.component.html
+++ b/src/app/northstarcoffee/northstarcoffee.component.html
@@ -375,7 +375,7 @@
                     </a>
                     <a routerLink="/our-work/runwayscrubs" class="case-items" ngxSlickItem>
                         <div class="card-h-txt desktop">
-                            <img class="logo_card sneaker" src="../../assets/image/RS-site-logo.png" width="100%" alt="">
+                            <img class="logo_card" src="../../assets/image/RS-site-logo.png" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">Runwayscrubs</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
