--- a/src/app/sneakercentral/sneakercentral.component.html
+++ b/src/app/sneakercentral/sneakercentral.component.html
@@ -375,7 +375,7 @@
                     </a>
                     <a routerLink="/our-work/runwayscrubs" class="case-items" ngxSlickItem>
                         <div class="card-h-txt desktop">
-                            <img class="logo_card sneaker" src="../../assets/image/RS-site-logo.png" width="100%" alt="">
+                            <img class="logo_card" src="../../assets/image/RS-site-logo.png" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">Runwayscrubs</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
@@ -391,7 +391,7 @@
                     </a>
                     <a routerLink="/our-work/northstarcoffee" class="case-items" ngxSlickItem>
                         <div class="card-h-txt desktop">
-                            <h3 class="logo_card">North Star Coffee</h3>
+                            <h3 class="logo_card egyptian">North Star Coffee</h3>
                             <div class="bottom_card">
                                 <h4 class="card-heading">Northstarcoffeeco</h4>
                                 <p class="card-txt">Shopify Plus Design & Build</p>
