--- a/src/styles.css
+++ b/src/styles.css
@@ -2747,6 +2747,9 @@ html {
     max-height: 60px;
     object-fit: contain;
 }
+#case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.sneaker {
+    max-width: 180px !important;
+}
 #case-slider-section .all-case-slider-wrap .case-slider-body .case-slider-wrapper .case-items .card-h-txt .logo_card.igluu {
     object-fit: contain;
 }
